Corrected TEXT datatype, converter, etc.